# motion_tracking_controller

./: .gitignore  README_.md  README_motion_tracking_controller.md  package.xml  run_mujoco_ros.sh  setup.cfg  setup.py
launch/: mujoco.launch.py  real.launch.py
motion_tracking_controller/: CMakeLists.txt  __init__.py  policy_node.py
