<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_tracking_controller</name>
  <version>0.0.0</version>
  <description>Run RL policies (MuJoCo or real robot) from W&amp;B or local ONNX.</description>
  <maintainer email="icmayoko18@gmail.com">Jean Chrysostome Mayoko Biong</maintainer>
  <license>MIT</license>

  <depend>ament_flake8</depend>
  <depend>ament_pep257</depend>
  <depend>python3-pytest</depend>
  
  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 Dependancies from Python side -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Python dependancies (system paquets if dispo, else via venv/pip) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-onnxruntime</exec_depend>

  <export>
    <!-- IMPORTANT : build_type = ament_python -->
    <build_type>ament_python</build_type>
  </export>
</package>
